--- a/package.json
+++ b/package.json
@@ -5,23 +5,36 @@
   "main": "index.js",
   "scripts": {
     "build": "babel src --out-dir dist",
-    "start": "nodemon --exec babel-node src/index.js",
+    "start": "NODE_ENV=development nodemon --exec babel-node src/index.js",
     "serve": "yarn run build && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc --reporter=html --reporter=text mocha ./test/*.js --exit --require @babel/register",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "author": "Quantum35",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^15.0.3",
+    "@sendgrid/mail": "^6.4.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "lodash": "^4.17.11",
+    "pg": "^7.11.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.8.9"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "@babel/register": "^7.4.4",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "coveralls": "^3.0.4",
+    "mocha": "^6.1.4",
     "morgan": "^1.9.1",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "nyc": "^14.1.1"
   }
 }
