--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "babel src --out-dir dist",
     "start": "NODE_ENV=development nodemon --exec babel-node src/index.js",
     "serve": "yarn run build && node dist/index.js",
-    "test": "nyc --reporter=html --reporter=text mocha ./test/*.js --exit --require @babel/register",
+    "migrate": "NODE_ENV=test sequelize db:migrate",
+    "undo": "NODE_ENV=test sequelize db:migrate:undo",
+    "seed": "NODE_ENV=test sequelize db:seed:all",
+    "test:local": "NODE_ENV=test nyc --reporter=html --reporter=text mocha ./test/*.test.js --timeout 40000 --exit --require @babel/register ---require regenerator-runtime",
+    "test": "NODE_ENV=test yarn undo && yarn migrate && yarn seed && yarn run test:local",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "author": "Quantum35",
@@ -24,6 +28,7 @@
     "lodash": "^4.17.11",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
+    "regenerator-runtime": "^0.13.2",
     "sequelize": "^5.8.9"
   },
   "devDependencies": {
