--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: node_js
 node_js:
   - "stable"
-before_script:
-  - yarn add sequelize-cli
-  - sequelize db:migrate
-  - sequelize db:seed:all
+# before_script:
+#   - yarn add sequelize-cli
+#   - sequelize db:migrate
+#   - sequelize db:seed:all
 cache: yarn
 script: 
-  - yarn test
+  - yarn run test
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.16.0
   - export PATH="$HOME/.yarn/bin:$PATH"
