--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 node_js:
   - "stable"
-# before_script:
-#   - yarn add sequelize-cli
+before_script:
+  - yarn add sequelize-cli
 #   - sequelize db:migrate
 #   - sequelize db:seed:all
 cache: yarn
