--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ before_script:
   - yarn add sequelize-cli
   - psql -c 'create database chalenge2;' -U postgres
 cache: yarn
-script: 
+script:
+  - cd api/
   - yarn run test
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.16.0
