--- a/admin/package.json
+++ b/admin/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "dotenv": "^8.0.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "jest-enzyme": "^7.0.2",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -14,6 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test-coverage": "yarn run test -- -u --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -29,6 +33,16 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "redux-mock-store": "^1.5.3"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/**.{js, jsx, tsx}",
+      "!node_modules/",
+      "!src/serviceWorker.js"
     ]
   }
 }
