--- a/admin/package.json
+++ b/admin/package.json
@@ -3,19 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "dotenv": "^8.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "jest-enzyme": "^7.0.2",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "redux-devtools-extension": "^2.13.8",
-    "axios": "^0.19.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
@@ -46,7 +45,7 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "src/**/**.{tsx, ts, js, jsx}",
+      "src/**/*.{js, jsx}",
       "!node_modules",
       "!src/serviceWorker.ts",
       "!src/index.tsx"
